test/scripted/compilation2/errors/cannot_coerce_fp_literal.bnj
# test:subtest
# test:error 5:18 "cannot coerce float literal to type 'i32'"

func main() {
    var a: i32 = 0.5;
}

# test:subtest
# test:error 14:16 "cannot coerce float literal to type 'S'"

struct S {}

func main() {
    var a: S = 0.5;
}
